<resources>
    <string name="app_name">yu键</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login_title">您好，</string>
    <string name="login_tip">只为yu健更好的自己，立即</string>
    <string name="login_btn_register">注册</string>
    <string name="login_label_phone">手机号</string>
    <string name="login_hint_phone">请输入手机号</string>
    <string name="login_label_pw">密码</string>
    <string name="login_hint_pw">请输入密码</string>
    <string name="login_forget_pw">忘记密码</string>
    <string name="login_btn_login">登录</string>

    <string name="register_title">注册</string>
    <string name="register_label_phone">手机号</string>
    <string name="register_hint_phone">请输入手机号</string>
    <string name="register_label_code">验证码</string>
    <string name="register_hint_code">请输入验证码</string>
    <string name="register_get_code">获取验证码</string>
    <string name="register_get_code_count_down">30</string>

    <string name="register_label_pw">密码</string>
    <string name="register_hint_pw">请设置密码</string>
    <string name="register_label_confirm_pw">确认密码</string>
    <string name="register_hint_confirm_pw">请再次确认密码</string>
    <string name="register_btn_register">注册</string>
    <string name="register_radio_1">健身房</string>
    <string name="register_radio_2">教练</string>
    <string name="register_radio_3">普通用户</string>

    <string name="forget_pw_title">修改密码</string>
    <string name="forget_pw_show_pw">显示</string>
    <string name="forget_pw_btn_submit">确 定</string>

    <string name="main_nav_menu_home">首页</string>
    <string name="main_nav_menu_friend">好友</string>
    <string name="main_nav_menu_fitnessroom">健身房</string>
    <string name="main_nav_menu_dynamic">动态</string>
    <string name="main_nav_menu_my">我的</string>
    <string name="main_friend_title">好友</string>
    <string name="main_timeline_title1">证书</string>
    <string name="main_timeline_title2">比赛</string>

    <string name="main_friend_btn_list_recommend">推荐</string>
    <string name="main_friend_btn_list_coach">教练</string>
    <string name="main_friend_btn_list_fitnessroom">健身房</string>
    <string name="main_friend_btn_list_user">用户</string>
    <string name="main_friend_btn_list_attention">关注</string>
    <string name="main_friend_btn_list_fans">粉丝</string>
    <string-array name="main_friend_btn_list">
        <item>@string/main_friend_btn_list_recommend</item>
        <item>@string/main_friend_btn_list_coach</item>
        <item>@string/main_friend_btn_list_fitnessroom</item>
        <item>@string/main_friend_btn_list_user</item>
        <item>@string/main_friend_btn_list_attention</item>
        <item>@string/main_friend_btn_list_fans</item>
    </string-array>

    <string name="friend_header_title">热门教练</string>
    <string name="dynamic_header_title">热门话题</string>
    <string name="fitness_room_title">健身房</string>

    <string name="user_profile_picture_sets_tag">这里的一切属于TA</string>
    <string name="user_profile_visitNum">访问量</string>
    <string name="user_profile_fansNum">粉丝量</string>
    <string name="user_profile_collectionNum">关注量</string>

    <string name="user_profile_tab_title1">简介</string>
    <string name="user_profile_tab_title2">教练课程</string>
    <string name="user_profile_tab_title3">动态</string>
    <string-array name="user_profile_tab">
        <item>@string/user_profile_tab_title1</item>
        <item>@string/user_profile_tab_title2</item>
        <item>@string/user_profile_tab_title3</item>
    </string-array>

    <string name="user_profile_relate_tab_title1">健身房</string>
    <string name="user_profile_relate_tab_title2">教练</string>
    <string name="user_profile_relate_tab_title3">用户</string>
    <string-array name="user_profile_relate_tab">
        <item>@string/user_profile_relate_tab_title1</item>
        <item>@string/user_profile_relate_tab_title2</item>
        <item>@string/user_profile_relate_tab_title3</item>
    </string-array>


    <string name="user_profile_go_to_introduce">查看此健身房的详情</string>

    <string name="input_please_input">请输入</string>
    <string name="input_please_input_feedback">请输入要反馈的信息</string>

    <string name="menu_edit">编辑</string>
    <string name="menu_cancel">取消</string>
    <string name="title_feedback_information">反馈信息</string>

    <string name="sub_title_topic">话题</string>
    <string name="sub_title_dynamic">动态</string>
    <string name="dynamic_title">朋友圈</string>


    <string name="dynamic_btn_list_recommend">推荐</string>
    <string name="dynamic_btn_list_nearby">附近</string>
    <string name="dynamic_btn_list_square">广场</string>
    <string name="dynamic_btn_list_coach">教练</string>
    <string name="dynamic_btn_list_user">用户</string>
    <string name="dynamic_btn_list_fitnessroom">健身房</string>
    <string name="dynamic_btn_list_attention">关注</string>

  
    <string-array name="dynamic_btn_list">
        <item>@string/dynamic_btn_list_recommend</item>
        <item>@string/dynamic_btn_list_nearby</item>
        <item>@string/dynamic_btn_list_square</item>
        <item>@string/dynamic_btn_list_coach</item>
        <item>@string/dynamic_btn_list_user</item>
        <item>@string/dynamic_btn_list_fitnessroom</item>
        <item>@string/dynamic_btn_list_attention</item>
    </string-array>
</resources>
