<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include
        android:id="@+id/include3"
        layout="@layout/toolbar"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/pageTitle"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="sdfdsf"
        android:textColor="@color/text_black"
        android:textSize="@dimen/page_title_size"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/include3"
        app:layout_constraintTop_toBottomOf="@+id/include3" />
    <android.support.design.widget.TabLayout
        android:id="@+id/tablayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/user_profile_relate_tab_title1"
            />
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/user_profile_relate_tab_title2"
            />
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/user_profile_relate_tab_title3"
            />
    </android.support.design.widget.TabLayout>
    <com.yujian.widget.XRecyclerViewEx
        android:id="@+id/relateUserList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>