<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/UserProfileBodyTheme">

    <android.support.v7.widget.CardView
        android:id="@+id/cardview_body"
        android:layout_width="match_parent"
        android:layout_height="74dp">

        <android.support.constraint.ConstraintLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/visitNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="TextView"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_view_size1"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_profile_visitNum"
                app:layout_constraintEnd_toEndOf="@+id/visitNum"
                app:layout_constraintStart_toStartOf="@+id/visitNum"
                app:layout_constraintTop_toBottomOf="@+id/visitNum" />

            <TextView
                android:id="@+id/fansNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_view_size1"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_profile_fansNum"
                app:layout_constraintEnd_toEndOf="@+id/fansNum"
                app:layout_constraintStart_toStartOf="@+id/fansNum"
                app:layout_constraintTop_toBottomOf="@+id/fansNum" />

            <TextView
                android:id="@+id/collectionNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_view_size1"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_profile_collectionNum"
                app:layout_constraintEnd_toEndOf="@+id/collectionNum"
                app:layout_constraintStart_toStartOf="@+id/collectionNum"
                app:layout_constraintTop_toBottomOf="@+id/collectionNum" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="40dp" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="120dp" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="200dp" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.design.widget.TabLayout
        android:id="@+id/viewpager_tablayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabMode="fixed"
        app:layout_constraintTop_toBottomOf="@+id/cardview_body"/>

    <!--<FrameLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->

        <!--app:layout_constraintBottom_toTopOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/viewpager_tablayout"-->
        <!--&gt;-->
        <!--<android.support.v4.view.ViewPager-->
            <!--android:id="@+id/viewpager"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:background="@color/colorPrimary"-->
            <!--android:backgroundTint="@color/colorPrimary"-->


            <!--/>-->

    <!--</FrameLayout>-->
    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:orientation="vertical"-->
        <!--android:layout_height="0dp"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/viewpager_tablayout"-->
        <!--android:backgroundTint="@color/colorPrimary"-->
        <!--android:background="@color/colorPrimary"-->
        <!--&gt;-->
        <!--&lt;!&ndash;<ImageView&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_width="wrap_content"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_height="match_parent"&ndash;&gt;-->
            <!--&lt;!&ndash;android:src="@drawable/login_btn_wx"&ndash;&gt;-->
            <!--&lt;!&ndash;/>&ndash;&gt;-->
        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textSize="25sp"-->
            <!--android:textColor="@color/colorPrimary"-->

            <!--/>-->
        <!--<android.support.v4.view.ViewPager-->
            <!--android:id="@+id/viewpager"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:visibility="visible"-->

            <!--/>-->

    <!--</LinearLayout>-->

    <!--<android.support.v4.view.ViewPager-->
        <!--android:id="@+id/viewpager"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="100dp"-->
        <!--app:layout_constraintVertical_weight="1"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/viewpager_tablayout"-->
        <!--/>-->


</android.support.constraint.ConstraintLayout>